<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_course">教程</string>
    <string name="action_language">语言</string>
    <string name="action_feedback">反馈</string>
    <string name="action_about">关于</string>
    <string name="logo">logo</string>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="common_android_wear_notification_needs_update_text">某个应用需要更新Android Wear应用才能正常运行。</string>
    <string name="common_android_wear_update_text">只有更新Android Wear应用后，此应用才能正常运行。</string>
    <string name="common_android_wear_update_title">更新Android Wear</string>
    <string name="common_google_play_services_enable_button">启用Google Play服务</string>
    <string name="common_google_play_services_enable_text">您必须先启用Google Play服务才能运行此应用。</string>
    <string name="common_google_play_services_enable_title">启用Google Play服务</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">%1$s发出的请求</string>
    <string name="common_google_play_services_install_button">获取Google Play服务</string>
    <string name="common_google_play_services_install_text_phone">您的手机中没有Google Play服务，您必须先安装该服务才能运行此应用。</string>
    <string name="common_google_play_services_install_text_tablet">您的平板电脑中没有Google Play服务，您必须先安装该服务才能运行此应用。</string>
    <string name="common_google_play_services_install_title">获取Google Play服务</string>
    <string name="common_google_play_services_invalid_account_text">此设备上不存在指定的帐户，请选择其他帐户。</string>
    <string name="common_google_play_services_invalid_account_title">无效帐户</string>
    <string name="common_google_play_services_needs_enabling_title">启用Google Play服务后才能运行应用。</string>
    <string name="common_google_play_services_network_error_text">您必须有数据网络连接才能接入Google Play服务。</string>
    <string name="common_google_play_services_network_error_title">网络错误</string>
    <string name="common_google_play_services_notification_needs_installation_title">安装Google Play服务后才能运行应用。</string>
    <string name="common_google_play_services_notification_needs_update_title">更新Google Play服务后才能运行应用。</string>
    <string name="common_google_play_services_notification_ticker">Google Play服务出错</string>
    <string name="common_google_play_services_sign_in_failed_text">登录该帐户时出错。请选择其他帐户。</string>
    <string name="common_google_play_services_sign_in_failed_title">登录失败</string>
    <string name="common_google_play_services_unknown_issue">Google Play服务出现未知问题。</string>
    <string name="common_google_play_services_unsupported_text">您的设备不支持部分应用所依赖的Google Play服务。请与设备制造商联系，以寻求帮助。</string>
    <string name="common_google_play_services_unsupported_title">Google Play服务</string>
    <string name="common_google_play_services_update_button">更新</string>
    <string name="common_google_play_services_update_text">您必须先更新Google Play服务才能运行此应用。</string>
    <string name="common_google_play_services_update_title">更新Google Play服务</string>
    <string name="common_open_on_phone">在手机上打开</string>
    <string name="common_signin_button_text">登录</string>
    <string name="signup_text">昵称</string>
    <string name="signup">注册</string>
    <string name="signup_telephone">手机号</string>
    <string name="signup_email">邮箱</string>
    <string name="common_signin_button_text_long">使用Google帐户登录</string>
    <string name="commono_google_play_services_api_unavailable_text">运行此应用所需的一项或多项 Google Play 服务目前无法使用。请与开发者联系以寻求帮助。</string>
    <string name="about">关于</string>
    <string name="account_id">账户ID</string>
    <string name="account_is_disabled_contact_your_broker">账户已禁用。请联系您的经纪人。</string>
    <string name="account_summary">账户摘要</string>
    <string name="action">操作</string>
    <string name="action_fail_please_try_again">操作失败，请重新操作</string>
    <string name="action_fail">操作失败\n %s</string>
    <string name="action_succ">操作成功</string>
    <string name="activity">活动</string>
    <string name="all">全部</string>
    <string name="all_time">全部时间</string>
    <string name="allocate_equity">分配净值</string>
    <string name="allow_notifications">允许通知</string>
    <string name="alreay_have_an_account">已经有账户了？</string>
    <string name="amount">金额</string>
    <string name="arabic">阿拉伯语</string>
    <string name="are_you_sure_you_want_to_delete_this_order">"您确定要
删除此订单？"</string>
    <string name="are_you_sure_you_want_to_exit_name">确定要退出%s？</string>
    <string name="are_you_sure_you_want_to_leave_the_social_community">您确定要离开社交社区吗？</string>
    <string name="are_you_sure_you_want_to_uncopy">确定要取消复制%s？</string>
    <string name="are_you_sure_you_want_to_unwatch">确定要取消关注%s？</string>
    <string name="are_you_sure_you_want_to_watch">确定要关注%s？</string>
    <string name="as_a_master_trader_you_must_close_all_positions">作为主交易者，你必须关闭所有头寸及订单</string>
    <string name="at_price">价格为</string>
    <string name="avatar">头像</string>
    <string name="avatar_update">上传头像</string>
    <string name="avatar_update_failed">头像上传失败</string>
    <string name="avatar_update_finished_successfully">已成功上传头像</string>
    <string name="avg_daily_pl">平均每日盈亏</string>
    <string name="b">买</string>
    <string name="back_to_trading">返回交易</string>
    <string name="balance">余额</string>
    <string name="become_part_of_community">加入社区</string>
    <string name="huiceper">最大回撤率</string>
    <string name="profitper">总收益率</string>
    <string name="button_to_trade">按钮进行交易。</string>
    <string name="buy">买进</string>
    <string name="buy_action">买进%s</string>
    <string name="buy_capitalize">买进</string>
    <string name="buy_limit">限价买入</string>
    <string name="buy_stop">止损买入</string>
    <string name="by_clicking_create_a_real_account_button_you_are_agreeing_to_the">"点击“创建真实账户”按钮即表示
您同意%1$s"</string>
    <string name="by_clicking_create_real_account">"点击“创建真实账户”按钮
即表示您同意"</string>
    <string name="by_clicking_join_social">点击“加入社区”即表示您同意</string>
    <string name="by_clicking_join_you_agree_to_the_terms_of_use">点击加入即表示您同意 %s</string>
    <string name="by_clicking_the_create_a_real_account_button_you_are_agreeing_to_the">点击“创建真实账户”按钮即表示您同意%1$s</string>
    <string name="by_clicking_the_i_agree_button_you_are_agreeing_to_the">点击“我同意”按钮即表示您同意</string>
    <string name="by_creating_an_account">开户即表示您同意%@</string>
    <string name="by_creating_an_account_android">开户即表示您同意%s</string>
    <string name="by_leaving_the_community_all_actions_related_to_a_master_will_be_unlinked_you_will_need_to_manually_manage_and_close_all_transactions">离开社区后，所有与主交易者相关的操作都将失效。您须手动管理、关闭所有交易</string>
    <string name="cancel">取消</string>
    <string name="cannot_load_page_please_contact_support">无法加载网页，请联系支持人员</string>
    <string name="check_internet_connection_and_try_again">检查网络连接，然后再试一次</string>
    <string name="check_your_network_connection">检查您的网络连接</string>
    <string name="chinese">中文</string>
    <string name="choose_account_type">选择账户类型</string>
    <string name="choose_your_country">选择您的国家</string>
    <string name="choose_your_language">选择您的语言</string>
    <string name="choose_your_nickname_and_avatar">选择您的昵称和头像</string>
    <string name="choose_your_nickname_and_avatar_2">选择您的昵称和头像</string>
    <string name="choose_your_nickname_and_avatar_and_join_the_community">选择您的昵称和头像，加入社区并获得最佳的交易体验</string>
    <string name="choose_your_nickname_and_avatar_and_join_the_community_for_the_best_trading_experience">选择您的昵称和头像，加入社区并获得最佳的交易体验</string>
    <string name="click_the_star_to_add_or_remove_carousel_instruments">点击星星以添加或删除转盘工具。</string>
    <string name="client_version">客户端版本</string>
    <string name="clipboard_unavailable">剪贴板不可用</string>
    <string name="close">平仓</string>
    <string name="close_app">关闭应用</string>
    <string name="close_position">平仓</string>
    <string name="close_price">平仓价格</string>
    <string name="close_rate">平仓%s</string>
    <string name="close_time">平仓时间</string>
    <string name="closed_positions">平仓仓位</string>
    <string name="closed_positions_num">平仓仓位 (%s)</string>
    <string name="coming_soon">敬请期待</string>
    <string name="commission">佣金</string>
    <string name="community">社区</string>
    <string name="confirm_password">确认密码</string>
    <string name="congratulation">恭喜！</string>
    <string name="connection_is_not_trusted_contact_support">连接不受信任。请联系支持人员。</string>
    <string name="connection_lost_app_switched_to_offline_mode_trying_to_reconnect">"失去连接。应用程序已切换到离线模式。
正在尝试重新连接..."</string>
    <string name="connection_problem_application_switched_to_offline_mode_check_your_internet_connection">"连接有问题，应用已切换到离线模式。
请检查您的互联网连接。"</string>
    <string name="continue_trading_with_the_latest_version_of_name_click_ok_to_upgrade_to_the_new_version">"使用最新版本的%s继续交易。
点击“确定”升级到新版本。"</string>
    <string name="copied">"已复制。 "</string>
    <string name="copied_capital">已复制</string>
    <string name="copied_from">复制自</string>
    <string name="copiers">复制者</string>
    <string name="copy">复制</string>
    <string name="copy_capitalize">"复制 "</string>
    <string name="copy_name_positions_with_amount_units_per_position">复制%1$s的仓位，每个仓位%2$s个单位。</string>
    <string name="copy_name_strategy_proportionally_with_instrument_amount">通过%2$s%3$s，按比例复制%1$s的策略</string>
    <string name="copy_or_watch_top_traders">复制或关注顶级操盘手的交易和策略</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="copying">复制中</string>
    <string name="could_not_update_chart">无法更新图表</string>
    <string name="country">国家</string>
    <string name="create_a_real_account">创建真实账户</string>
    <string name="create_account">开户</string>
    <string name="create_an_account_and_start_trading">创建账户并开始交易</string>
    <string name="create_real_account">开通真实账户</string>
    <string name="credit">赠金</string>
    <string name="day">天</string>
    <string name="days">天</string>
    <string name="delete">删除</string>
    <string name="delete_pending_order">删除挂单</string>
    <string name="demo">演示</string>
    <string name="deposit">存入资金</string>
    <string name="desired_price_is_not_available">目标价格不可用</string>
    <string name="fourteen_days">14天</string>
    <string name="high">高</string>
    <string name="instrument">工具</string>
    <string name="low">低</string>
    <string name="medium">中等</string>
    <string name="one_month_capital">1个月</string>
    <string name="open_price">建仓价格</string>
    <string name="please_enter_sign_up_name">请输入昵称</string>
    <string name="please_enter_sign_up_telephone">请输入手机号码</string>
    <string name="please_enter_sign_up_email">请输入邮箱</string>
    <string name="profit">利润</string>
    <string name="risk_level">风险水平</string>
    <string name="seven_days">7天</string>
    <string name="lever50">50</string>
    <string name="lever100">100</string>
    <string name="lever200">200</string>
    <string name="lever300">300</string>
    <string name="lever400">400</string>
    <string name="lever">杠杆</string>
    <string name="back">返回</string>
</resources>