<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="@dimen/header_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextHeader" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/instrument" android:layout_weight="@integer/open_position_column_1" />
    <TextView android:textAppearance="@style/TextHeader" android:paddingLeft="@dimen/space_small" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/action" android:layout_weight="@integer/open_position_column_2" />
    <TextView android:textAppearance="@style/TextHeader" android:gravity="right" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/amount" android:layout_weight="@integer/open_position_column_3" />
    <TextView android:textAppearance="@style/TextHeader" android:gravity="right" android:paddingRight="@dimen/space_small" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/profit" android:layout_weight="@integer/open_position_column_4_1" />
    <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/open_position_column_4_2" />
</merge>