<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_normal"
    android:paddingLeft="@dimen/space_xxbig"
    android:paddingRight="@dimen/space_xxbig">

    <TextView
        style="@style/TextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/risk_level" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="7.5dp"
        android:layout_marginRight="8dp"
        android:max="100"
        android:progress="80"
        android:progressDrawable="@drawable/progressbar"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/low" />

        <TextView
            style="@style/TextDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/medium" />

        <TextView
            style="@style/TextDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/high" />
    </RelativeLayout>
</LinearLayout>

