<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/bg_login"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dip"
        android:layout_height="60dip"
        android:layout_marginLeft="@dimen/image_title_left"
        android:layout_marginTop="@dimen/space_xxbig"
        android:src="@mipmap/title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px214"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView

                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                style="@style/TextDescWhile"
                android:text="@string/signup_text"/>

            <EditText
                android:id="@+id/et_sign_up_name"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/px51"
                android:layout_weight="6"
                android:background="@drawable/login_info_bg"
                android:gravity="center"
                android:hint="@string/please_enter_sign_up_name"
                style="@style/TextDescWhile"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/text_color_pull_head_text_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_sign_up_name_prompt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:paddingRight="@dimen/px100"
            android:textSize="12sp"
            android:visibility="invisible"
            android:textColor="@color/red"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/TextDescWhile"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/signup_telephone"/>

            <EditText
                android:id="@+id/et_sign_up_telephone"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/px51"
                android:layout_weight="6"
                android:singleLine="true"
                android:gravity="center"
                android:inputType="phone"
                android:hint="@string/please_enter_sign_up_telephone"
                android:background="@drawable/login_info_bg"
                style="@style/TextDescWhile"
                android:textColorHint="@color/text_color_pull_head_text_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_sign_up_telephone_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:gravity="center|right"
            android:paddingRight="@dimen/px100"
            android:textSize="10sp"
            android:textColor="@color/red"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/TextDescWhile"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/signup_email"/>

            <EditText
                android:id="@+id/et_sign_up_email"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/px51"
                android:layout_weight="6"
                android:gravity="center"
                android:hint="@string/please_enter_sign_up_email"
                android:singleLine="true"
                android:background="@drawable/login_info_bg"
                style="@style/TextDescWhile"
                android:textColorHint="@color/text_color_pull_head_text_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_sign_up_email_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:visibility="invisible"
            android:paddingRight="@dimen/px100"
            android:textSize="10sp"
            android:textColor="@color/red"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            style="@style/TextDescWhile"
            android:text="@string/lever"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/rg_lever"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="horizontal"

                    android:padding="@dimen/space_big">

            <RadioButton
                android:id="@+id/rb_lever50"
                style="@style/Branded.Button.Small.Radio"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_xxbig"
                android:layout_weight="1.0"

                android:text="@string/lever50"/>

            <RadioButton
                android:id="@+id/rb_lever100"
                style="@style/Branded.Button.Small.Radio"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_xxbig"
                android:layout_weight="1.0"
                android:text="@string/lever100"/>

            <RadioButton
                android:id="@+id/rb_lever200"
                style="@style/Branded.Button.Small.Radio"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_xxbig"
                android:layout_weight="1.0"
                android:checked="true"
                android:text="@string/lever200"/>

            <RadioButton
                android:id="@+id/rb_lever300"
                style="@style/Branded.Button.Small.Radio"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_xxbig"
                android:layout_weight="1.0"
                android:text="@string/lever300"/>

            <RadioButton
                android:id="@+id/rb_lever400"
                style="@style/Branded.Button.Small.Radio"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_xxbig"
                android:layout_weight="1.0"
                android:text="@string/lever400"/>

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px51"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/b_sign_up_back"
            style="@style/Button.Action"
            android:layout_width="135dip"
            android:layout_height="36dip"
            android:layout_gravity="center_horizontal"
            android:text="@string/back"
            android:textSize="16sp"
            android:background="@drawable/b_bg"
            android:textColor="@android:color/white"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/b_sign_up_enter"
                style="@style/Button.Action"
                android:layout_width="135dip"
                android:layout_height="36dip"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/signup"
                android:background="@drawable/b_bg"
                android:textColor="@android:color/white"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>